Fix text overflow

--- a/app/styles/_popup.scss
+++ b/app/styles/_popup.scss
@@ -111,7 +111,7 @@ body {
 .zync-history-text {
   font-size: 12px;
   white-space: pre-wrap;
-  width: 100%;
+  width: 90%;
   height: 100%;
   word-wrap: break-word;
   overflow-y: auto;
